# spline-wire

./: .gitignore  CLAUDE.md  pyproject.toml
data/: test-strip-spec.yaml
docs/: architecture.md  fiducial-design.md  next-steps.md  notes.md  open-questions.md
docs/superpowers/plans/: 2026-04-22-llm-cv-validation.md  2026-04-25-ring-glyph-fiducial-impl.md
docs/superpowers/specs/: 2026-04-25-ring-glyph-fiducial-design.md
scripts/: generate_synthetic.py
tests/: conftest.py  test_extraction.py  test_fiducial_geometry.py  test_ground_truth.py  test_homography.py  test_schemas.py  test_scoring.py  test_synthetic.py
validation/: cli.py  extraction.py  fiducial_geometry.py  ground_truth.py  homography.py  prompts.py  schemas.py  scoring.py  synthetic.py
